# ornabook

./: book.toml
mdbook-cade/: Cargo.toml
mdbook-cade/src/: anguish.rs  lib.rs  main.rs
mdbook-icons/: Cargo.toml
mdbook-icons/src/: lib.rs  main.rs
orna_data/: anguish-choices.yaml
src/: Annexes.md  Contributors.md  Dungeons.md  Gear.md  Glossary.md  Guilds.md  Kingdoms.md  OriginTown.md  Raids.md  SUMMARY.md  StatusEffects.md  TableOfContents.md  WorldRaidBosses.md  mdbook-icons.css
src/Guilds/: Anguish_2.0.md
src/style/: style.css
theme/: index.hbs
theme/css/: variables.css
