[package]
name = "mdbook-icons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.4"
mdbook = "0.4.30"
pulldown-cmark = "0.11.0"
pulldown-cmark-to-cmark = "15.0.1"
semver = "1.0.17"
serde_json = "1.0.96"
